<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_rectangular">

    <TextView
        android:id="@+id/txtPayEfectivo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_for_et"
        android:fontFamily="@font/andada"
        android:padding="10dp"
        android:text="@string/efectivo"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/txtPayVisa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtPayEfectivo"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_for_et"
        android:fontFamily="@font/andada"
        android:padding="10dp"
        android:text="@string/pos"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/txtPayYape"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtPayVisa"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_for_et"
        android:fontFamily="@font/andada"
        android:padding="10dp"
        android:text="@string/yape"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/txtPayCripto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtPayYape"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:background="@drawable/shape_for_et"
        android:fontFamily="@font/andada"
        android:padding="10dp"
        android:text="@string/cripto"
        android:textSize="25sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDivide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtPayCripto"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/andada"
        android:padding="10dp"
        android:text="@string/divide"
        android:textAllCaps="false"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edtPropina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnDivide"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:inputType="number"
        android:background="@drawable/shape_for_et"
        android:fontFamily="@font/andada"
        android:hint="@string/propina"
        android:padding="10dp" />


</RelativeLayout>