<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_for_et">

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_for_et"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:id="@+id/edtEmailRegister"
        android:layout_marginHorizontal="10dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:padding="10dp"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtEmailRegister"
        android:layout_centerHorizontal="true"
        android:background="@drawable/shape_for_et"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        android:layout_marginHorizontal="10dp"
        android:padding="10dp"
        android:hint="@string/contraseña"
        android:inputType="textPassword"
        android:id="@+id/edtPasswordRegister"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/edtPasswordRegister"
        android:layout_marginVertical="10dp"
        android:text="@string/registrarse"
        android:id="@+id/btnRegister"/>

</RelativeLayout>