<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/shape_for_et">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtNotiPedido"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"
        android:text="@string/nuevo_pedido"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/alegreya_sc"
        android:textSize="18sp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/recNotiPedido"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/txtNotiPedido"/>

    <Button
        android:id="@+id/btnNotiPedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/recNotiPedido"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:backgroundTint="@color/notification"
        android:text="@string/confirmar" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/omitir"
        android:id="@+id/btnOmitir"
        android:layout_below="@+id/btnNotiPedido"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/notification"/>

</RelativeLayout>