<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parentReserva"
    app:cardCornerRadius="15dp"
    app:cardElevation="15dp"
    android:layout_marginHorizontal="20dp"
    android:layout_marginBottom="10dp"
    android:layout_marginTop="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layTwo"
        android:layout_below="@+id/layOne"
        android:visibility="visible"
        android:layout_margin="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/txtNombre"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_toEndOf="@+id/txtNombreLabel"
            android:layout_marginStart="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reserva_nombre"
            android:id="@+id/txtNombreLabel"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/txtHora"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_toEndOf="@+id/txtHoraLabel"
            android:layout_below="@+id/txtNombre"
            android:layout_marginStart="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reserva_hora"
            android:id="@+id/txtHoraLabel"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            android:layout_below="@+id/txtNombreLabel"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtHora"
            android:text=""
            android:id="@+id/txtPax"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_toEndOf="@id/txtPaxLabel"
            android:layout_marginStart="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/reserva_pax"
            android:layout_below="@id/txtHoraLabel"
            android:layout_marginStart="10dp"
            android:id="@+id/txtPaxLabel"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtPax"
            android:text=""
            android:id="@+id/txtMesa"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_toEndOf="@id/txtMesaLabel"
            android:layout_marginStart="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtMesaLabel"
            android:text="@string/reserva_telefono"
            android:layout_below="@+id/txtPax"
            android:layout_marginStart="10dp"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtMesa"
            android:id="@+id/txtComentario"
            android:textSize="18sp"
            android:gravity="start"
            android:layout_toEndOf="@id/txtComentarioLabel"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtComentarioLabel"
            android:text="@string/reserva_comentario"
            android:layout_below="@+id/txtMesa"
            android:layout_marginStart="10dp"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>


</com.google.android.material.card.MaterialCardView>