<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:background="@drawable/shape_rectangular"
    android:padding="5dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txtIngreso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/andada"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/ingreso_total"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtIngresoNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/andada"
        android:gravity="center"
        android:padding="15dp"
        android:text="100"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/txtIngreso"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toTopOf="@+id/txtIngreso" />

    <TextView
        android:id="@+id/txtEfectivo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/andada"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/ingreso_efectivo"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtIngreso" />

    <TextView
        android:id="@+id/txtEfectivoNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/andada"
        android:gravity="center"
        android:padding="15dp"
        android:text="100"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/txtEfectivo"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toTopOf="@+id/txtEfectivo" />

    <TextView
        android:id="@+id/txtVisa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/andada"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/ingreso_pos"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEfectivo" />

    <TextView
        android:id="@+id/txtVisaNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/andada"
        android:gravity="center"
        android:padding="15dp"
        android:text="100"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/txtVisa"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toTopOf="@+id/txtVisa" />

    <TextView
        android:id="@+id/txtYape"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/andada"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/ingreso_yape"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtVisa" />

    <TextView
        android:id="@+id/txtYapeNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/andada"
        android:gravity="center"
        android:padding="15dp"
        android:text="100"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/txtYape"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toTopOf="@+id/txtYape" />

    <TextView
        android:id="@+id/txtCripto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/andada"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/ingreso_cripto"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtYape" />

    <TextView
        android:id="@+id/txtCriptoNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/andada"
        android:gravity="center"
        android:padding="15dp"
        android:text="100"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/txtCripto"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toTopOf="@+id/txtCripto" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="123dp" />

</androidx.constraintlayout.widget.ConstraintLayout>